--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,6 +1,7 @@
 
 :root{
     ---font-family:"Inter", sans-serif;
+    --font-color:#FFFFFF: 
 }
 
 
@@ -41,3 +42,48 @@ nav .links li a{
     
 }
 
+main{
+    min-height: 65vh;
+    max-width: 100%;
+    position:relative; 
+    box-sizing: border-box;
+}
+
+section.about{
+  border-radius:14px;
+  padding: 1.6rem 0;
+  background-color:#21478D;
+  width: 100%;
+  height: 500px;
+  color: rgba(255, 255, 255, 0.543);
+}
+.entete{
+    display: flex;
+    justify-content: space-between;
+}
+.titre{
+    font-size: 3rem;
+}
+
+.titre::after{
+    position: absolute;
+    content: "";
+    top:2.5rem;
+    background-color:rgba(255, 255, 255, 0.543) ;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+}
+
+
+.number-fleche{
+    border: 1px solid black;
+    width: 200px;
+    display: flex;
+    justify-content:  space-around;
+    margin-right:4rem ;
+}
+
+.number-fleche p{
+    font-size: 2rem;
+}
