--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -21,11 +21,11 @@ header{
     padding: 0 3rem;
     position: relative;
     /* border: 1px solid black; */
+    height: 76px; 
     max-width:100%;
     display: flex;
     justify-content: space-between;
     
-
 }
 
 
@@ -48,14 +48,17 @@ main{
     position:relative; 
     box-sizing: border-box;
 }
-
+span{
+    color: white;
+}
+/* SECTION ABOUT */
 section.about{
   border-radius:14px;
   padding: 1.6rem 0;
   background-color:#21478D;
   width: 100%;
-  height: 500px;
-  color: rgba(255, 255, 255, 0.543);
+  max-height: 100vh;
+  color: rgba(255, 255, 255, 0.723);
 }
 .entete{
     display: flex;
@@ -68,8 +71,9 @@ section.about{
 .titre::after{
     position: absolute;
     content: "";
-    top:2.5rem;
-    background-color:rgba(255, 255, 255, 0.543) ;
+    top:2.5rem; 
+    left: 17.5rem;
+    background-color:rgba(255, 255, 255, 0.723) ;
     height: 35px;
     width: 35px;
     border-radius: 50%;
@@ -77,13 +81,34 @@ section.about{
 
 
 .number-fleche{
-    border: 1px solid black;
-    width: 200px;
+    /* border: 1px solid black; */
+    width: 250px;
     display: flex;
-    justify-content:  space-around;
+    text-align: center;
+    justify-content:space-around;
     margin-right:4rem ;
 }
 
 .number-fleche p{
     font-size: 2rem;
 }
+.number-fleche i{
+    margin-top: -1rem;
+    font-size: 4rem;
+}
+
+.paragraphe{
+    /* border:1px solid black;  */
+    font-size: 2.5rem;
+    width: 55%;
+    margin-left: 2rem;
+    margin-top: 4rem;
+}
+
+.date{
+    margin-left: 60rem;
+    font-size: 11rem;
+    /*border:1px solid black;*/
+    height: 250px;
+}
+
