--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -102,9 +102,10 @@ background-color:#21478d95;
 }
  /* arrow */
 #arrow{
+    opacity: 1;
     margin-top: -1rem;
     font-size: 4rem;
-    transition: transform 0.5s ease;
+    transition: transform  0.5s ease;
 }
 
 #arrow.turn{
@@ -115,9 +116,11 @@ background-color:#21478d95;
 
 
 #arrow1{
+    opacity: 1;
     margin-top: -1rem;
     font-size: 4rem;
     transition: transform  0.5s ease;
+
 }
 
 #arrow:hover,#arrow1:hover{
@@ -179,7 +182,12 @@ section.portrait{
 .portrait .paragraphe{
     font-size: 5rem;
 }
-
+.portrait .detail{
+    text-align: justify;
+    font-size: 1.5rem;
+    margin-left: 2.5rem;
+    width: 30%;
+}
 .titre1{
     font-size: 3rem;
 }
@@ -191,9 +199,10 @@ section.portrait{
   
 /* parti animation photo*/
 .img-presentation{
-    margin-left: 60rem;
+    margin-top: -14rem;
+    margin-left: 70rem;
     display: inline-block;
-    width: 28%;
+    width: 25%;
 }
 
 
@@ -205,7 +214,111 @@ section.portrait{
    object-fit: cover;
    transition: opacity 0.4s ease;
  }
+
  .img-presentation img:hover{
     opacity: 0.7;
  }
 
+
+ img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: opacity 0.3s;
+    user-select: none;
+}
+
+
+
+.container{
+    visibility:hidden;
+    position: fixed; /* Fixé sur l'écran */
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    opacity: 0; 
+    overflow: hidden;
+    background-color: rgb(255, 255, 255);
+    transition: opacity 0.6s ease-in-out; /* Animation fluide */
+
+}
+
+    .container.open {
+        visibility: visible;
+        opacity: 1; /* Devient visible en douceur */
+    }
+
+.minimap{
+    position: absolute;
+    top: 90%;
+    width: 100%;
+    height: 100px;
+    left: 40rem;
+}
+
+.img-preview{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 75%;
+    overflow: hidden;
+}
+
+.img-preview img{
+    position:absolute; 
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    width:100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.items{
+
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    will-change: transform;
+    gap: 0px;
+}
+
+.item{
+    cursor: pointer;
+    width: 5%;
+    height: 70px;
+    padding: 5px ;
+}
+
+.indicator{
+  position:absolute;
+  left: 0;
+  top: 0;
+  border-radius: 5px;
+  border:2px solid rgb(203, 203, 203); 
+  width: 5%;
+  height: 70px;
+  z-index: 2;
+}
+ .mini-nav{
+    margin: 1rem auto;
+    display: flex;
+    justify-content: space-between;
+    max-width: 90%;
+    color: black;
+ }
+
+
+.nom{
+    color: black;
+    border-bottom: 1px solid black;
+}
+.back{
+    color: black;
+    border-bottom: 1px solid black;
+}
