--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -13,7 +13,7 @@
 }
 body{
     font-family: var(---font-family);
-    background-color:rgba(0, 0, 0, 0.673);
+    background-color:white; 
 }
 
 
@@ -26,7 +26,7 @@ header{
     max-width:100%;
     display: flex;
     justify-content: space-between;
-    color: white;
+    color: rgb(0, 0, 0);
     
 }
 
@@ -40,7 +40,7 @@ nav .links li{
 }
 nav .links li a{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 
 }
 
@@ -240,7 +240,7 @@ section.portrait{
     opacity: 0; 
     overflow: hidden;
     background-color: rgb(255, 255, 255);
-    transition: opacity 0.6s ease-in-out; /* Animation fluide */
+    transition: opacity 0.5s ease, visibility 0.5s ease;
 
 }
 
@@ -248,6 +248,12 @@ section.portrait{
         visibility: visible;
         opacity: 1; /* Devient visible en douceur */
     }
+
+
+.container.closing {
+    opacity: 0;
+    visibility: hidden;
+}
 
 .minimap{
     position: absolute;
