--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -123,14 +123,31 @@ background-color:#21478d95;
 
 }
 
-#arrow:hover,#arrow1:hover{
+#arrow1.turn{
+    transform : rotate(180deg); 
+    transition: transform 0.5s ease;
+}
+
+
+#arrow2{
+    opacity: 1;
+    margin-top: -1rem;
+    font-size: 4rem;
+    transition: transform  0.5s ease;
+
+}
+
+#arrow2.turn{
+    transform : rotate(180deg); 
+    transition: transform 0.5s ease;
+}
+
+    
+#arrow:hover,#arrow1:hover,#arrow2:hover{
     color: white;
 }
 
-#arrow1.turn{
-     transform : rotate(180deg); 
-     transition: transform 0.5s ease;
-}
+
 
 
 .paragraphe{
@@ -166,23 +183,25 @@ section.work{
 }
 
 
-section.portrait{
+section.fashion{
     position: relative;
     bottom: 40rem;
     background-color:#a7a7a7;
     z-index: 3;
     transition: bottom 0.5s ease;       
    }
-   section.portrait.down{
+
+
+   section.fashion.down{
     bottom: 20rem;
     transition: bottom 0.5s ease;     
    }
 
 
-.portrait .paragraphe{
+.fashion .paragraphe{
     font-size: 5rem;
 }
-.portrait .detail{
+.fashion .detail, .street .detail{
     text-align: justify;
     font-size: 1.5rem;
     margin-left: 2.5rem;
@@ -192,14 +211,70 @@ section.portrait{
     font-size: 3rem;
 }
 
-.portrait .paragraphe{
-    font-size: 4rem;
-    display: inline;
+
+section.street{
+    position: relative;
+    bottom: 45rem;
+    z-index: 3;
+    background-color:#1f1f1f;
+    transition: bottom 0.5s ease;       
+ }
+
+ section.street.down{
+    bottom: 40rem;
+    transition: bottom 0.5s ease;     
 }
-  
+
+.img-presentation1{
+    margin-top: -14rem;
+    margin-left: 70rem;
+    display: inline-block;
+    width: 25%;
+}
+
+
+ .img-presentation1 img{
+    border-radius: 6px;
+    opacity: 1;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   transition: opacity 0.4s ease;
+ }
+
+ .img-presentation1 img:hover{
+    opacity: 0.7;
+ }
+
+/* footer */
+
+.tm{
+    color: rgb(175, 0, 0);
+}
+footer{
+   min-height: 30vh;
+}
+
+.information-container{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    border: 1px solid black;
+    max-width: 100%;
+}
+
+footer .portfolio{
+    
+    display: inline-block;
+    border: 1px solid black;
+    font-size: 18rem;
+    font-weight: 300;
+}
+
+
 /* parti animation photo*/
 .img-presentation{
-    margin-top: -14rem;
+    margin-top: -20rem;
     margin-left: 70rem;
     display: inline-block;
     width: 25%;
@@ -244,10 +319,11 @@ section.portrait{
 
 }
 
-    .container.open {
+ .container.open {
         visibility: visible;
         opacity: 1; /* Devient visible en douceur */
-    }
+        z-index: 10;
+ }
 
 
 .container.closing {
@@ -260,7 +336,7 @@ section.portrait{
     top: 90%;
     width: 100%;
     height: 100px;
-    left: 40rem;
+    left: 50rem;
 }
 
 .img-preview{
@@ -328,3 +404,4 @@ section.portrait{
     color: black;
     border-bottom: 1px solid black;
 }
+
