--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -33,7 +33,7 @@ header{
 #heure{
     font-weight: 300;
     color:rgba(0, 0, 0, 0.696); 
-    font-size: 3.2rem;
+    font-size: 2rem;
 }
 
 nav .links{
@@ -152,6 +152,15 @@ background-color:#21478d95;
     color: white;
 }
 
+.paragraphe1{
+    z-index: 10;
+    /* border:1px solid black;  */
+    font-size: 2.5rem;
+    width: 55%;
+    margin-left: 2rem;
+    margin-top: 4rem;
+
+}
 
 
 
@@ -207,7 +216,6 @@ section.fashion{
     font-size: 5rem;
 }
 .fashion .detail, .street .detail{
-    text-align: justify;
     font-size: 1.5rem;
     margin-left: 2.5rem;
     width: 30%;
@@ -304,11 +312,13 @@ footer .portfolio{
    width: 100%;
    height: 100%;
    object-fit: cover;
-   transition: opacity 0.4s ease;
+   transition: transform 0.4s ease, opacity 0.4s ease;
  }
 
  .img-presentation img:hover{
     opacity: 0.7;
+    transform: scale(1.1); 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Ajouter une ombre */
  }
 
 
