--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -152,25 +152,19 @@ background-color:#21478d95;
     color: white;
 }
 
-.paragraphe1{
-    z-index: 10;
+.paragraphes{
+
     /* border:1px solid black;  */
     font-size: 2.5rem;
     width: 55%;
     margin-left: 2rem;
     margin-top: 4rem;
+    font-weight: 500;
 
 }
 
 
 
-.paragraphe{
-    /* border:1px solid black;  */
-    font-size: 2.5rem;
-    width: 55%;
-    margin-left: 2rem;
-    margin-top: 4rem;
-}
 
 .date{
     margin-left: 60rem;
@@ -247,8 +241,8 @@ section.street{
 
 
  .img-presentation1 img{
-    border-radius: 6px;
-    opacity: 1;
+   border-radius: 6px;
+   opacity: 1;
    width: 100%;
    height: 100%;
    object-fit: cover;
@@ -263,12 +257,13 @@ section.street{
 
 
 footer{
-    
-margin-top:-8rem;
+    position: relative;
+    margin-top:-8rem;
 }
 
 .information-container{
-    bottom: -125rem;
+    padding: 1rem;
+    bottom: 25rem;
     position: absolute;
     display: flex;
     justify-content: space-between;
@@ -277,22 +272,40 @@ margin-top:-8rem;
     z-index: 20;
 }
 
-
-
 .info{
- 
   margin-top: 20rem;
+  color: white;
+}
+
+.info a{
+    text-decoration: none;
+    color: white;
 }
 .information-container .location{
     font-size: 4rem;
+    color: white;
 }
 
 footer .portfolio{
     margin: 0 auto;
     font-size: 18rem;
     font-weight: 300;
+    color: white;
 }
 
+
+.back1 img{
+    width: 100%;
+}
+
+.back1{
+    position: absolute;
+    z-index: -10;
+    width: 100%;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 0;
+}
 .gris{
     color: rgba(0, 0, 0, 0.378);
 }
@@ -341,6 +354,7 @@ footer .portfolio{
     width: 100vw;
     opacity: 0; 
     overflow: hidden;
+    z-index: 100;
     background-color: rgb(255, 255, 255);
     transition: opacity 0.5s ease, visibility 0.5s ease;
 
