--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -153,17 +153,20 @@ background-color:#21478d95;
 }
 
 .paragraphes{
-
     /* border:1px solid black;  */
     font-size: 2.5rem;
     width: 55%;
-    margin-left: 2rem;
-    margin-top: 4rem;
     font-weight: 500;
-
 }
 
-
+.separation{
+    position: relative;
+    margin: 0 auto;
+    padding: 2rem; 
+    display: flex;
+    justify-content:space-between;
+    
+}
 
 
 .date{
@@ -206,59 +209,13 @@ section.fashion{
    }
 
 
-.fashion .paragraphe{
-    font-size: 5rem;
-}
-.fashion .detail, .street .detail{
-    font-size: 1.5rem;
-    margin-left: 2.5rem;
-    width: 30%;
-}
-.titre1{
-    font-size: 3rem;
-}
-
-
-section.street{
-    position: relative;
-    bottom: 45rem;
-    z-index: 3;
-    background-color:#1f1f1f;
-    transition: bottom 0.5s ease;       
- }
-
- section.street.down{
-    bottom: 40rem;
-    transition: bottom 0.5s ease;     
-}
-
-.img-presentation1{
-    margin-top: -14rem;
-    margin-left: 70rem;
-    display: inline-block;
-    width: 25%;
-}
-
-
- .img-presentation1 img{
-   border-radius: 6px;
-   opacity: 1;
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
-   transition: opacity 0.4s ease;
- }
-
- .img-presentation1 img:hover{
-    opacity: 0.7;
- }
-
 /* footer */
 
 
 footer{
     position: relative;
     margin-top:-8rem;
+    z-index: 0;
 }
 
 .information-container{
@@ -287,10 +244,13 @@ footer{
 }
 
 footer .portfolio{
+    position: relative;
     margin: 0 auto;
     font-size: 18rem;
     font-weight: 300;
-    color: white;
+    color: white; 
+    z-index: 20;
+    pointer-events: auto;
 }
 
 
@@ -300,21 +260,21 @@ footer .portfolio{
 
 .back1{
     position: absolute;
-    z-index: -10;
+    z-index: 1;
     width: 100%;
     transform: translateX(-50%);
     left: 50%;
     bottom: 0;
 }
+
+
+
 .gris{
     color: rgba(0, 0, 0, 0.378);
 }
 
 /* parti animation photo*/
 .img-presentation{
-    margin-top: -20rem;
-    margin-left: 70rem;
-    display: inline-block;
     width: 25%;
 }
 
