--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -77,8 +77,13 @@ background-color:#21478d95;
     display: flex;
     justify-content: space-between;
 }
-.titre{
+.titre1{
     font-size: 3rem;
+    padding: 1.5rem;
+    text-decoration: line-through;
+}
+#space{
+    padding-left: 2rem;
 }
 
 
@@ -148,14 +153,16 @@ background-color:#21478d95;
 }
 
 .para{
-    width: 55%;
+    width: 70%;
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
+    flex-direction: column;    
+    height: 55vh;
+    
 }
 
 .separation{
-    width: 90%;
+    width: 95%;
     position: relative;
     margin: 0 auto;
     padding: 2rem; 
@@ -210,7 +217,7 @@ section.fashion{
 
 footer{
     position: relative;
-    margin-top:-12rem;
+    margin-top:-9rem;
     z-index: 0;
 }
 
@@ -228,6 +235,8 @@ footer{
 .info{
   margin-top: 20rem;
   color: white;
+  border-left: 1px solid white;
+  padding-left: 0.5rem;
 }
 
 .info a{
@@ -272,32 +281,6 @@ footer{
 .gris{
     color: rgba(0, 0, 0, 0.378);
 }
-
-
-.decoration{
-    background-color: rgba(255, 255, 255, 0.197);
-    bottom: 2rem;
-    width: 25%;
-    position: relative;
-    left: 50%;
-    z-index: 2;
-    font-size: 2rem;
-    color:rgba(255, 255, 255, 0.609);
-}
-
-
-.decoration1{
-    width: 25%;
-    position: relative;
-    left: 60%;
-    z-index: 2;
-    font-size: 2rem;
-    color:rgba(255, 255, 255, 0.609);
-}
-
-
-
-
 
 /* parti animation photo*/
 .img-presentation{
@@ -434,5 +417,15 @@ footer{
 .back{
     color: black;
     border-bottom: 1px solid black;
+}
+
+
+/* Animation footer*/
+
+
+.demo span{
+   
+    display: inline-block;
+
 }
 
