--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -217,7 +217,7 @@ section.fashion{
 
 footer{
     position: relative;
-    margin-top:-9rem;
+    margin-top:-4rem;
     z-index: 0;
 }
 
@@ -251,7 +251,8 @@ footer{
 .titre{
     position: relative;
     width: 100%;
-    z-index: 1;   
+    z-index: 1; 
+    bottom: 0rem; 
 }
 
 .titre .portfolio{
@@ -273,7 +274,7 @@ footer{
     width: 100%;
     transform: translateX(-50%);
     left: 50%;
-    bottom: 0;
+    bottom: 0rem;
 }
 
 
